--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^3.4.0",
     "vue-country-code-select": "^1.6.7",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
