--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "todolist",
+  "name": "OSN",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "ongolo <atanganamr@yahoo.com>",
+  "author": "TAMO <estadiotamo@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@grafikri/vue-middleware": "^1.0.0",
     "axios": "^0.24.0",
     "vue": "^2.5.2",
     "vue-axios": "^3.4.0",
